# gla

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  README.md  bazel-bin  bazel-gla  bazel-out  bazel-testlogs  non_module_deps.bzl  pyproject.toml  xvfb_2%3a21.1.4-2ubuntu1.7~22.04.16_amd64.deb
schemas/: BUILD.bazel  frame_capture.fbs
src/core/: BUILD.bazel  README.md  engine.cpp  engine.h  engine_main.cpp
src/core/ipc/: control_socket.cpp  control_socket.h  protocol.h  shm_ring_buffer.cpp  shm_ring_buffer.h
src/core/normalize/: normalized_types.h  normalizer.cpp  normalizer.h
src/core/query/: query_engine.cpp  query_engine.h
src/core/semantic/: camera_extractor.cpp  camera_extractor.h  matrix_classifier.cpp  matrix_classifier.h  object_grouper.cpp  object_grouper.h  scene_reconstructor.cpp  scene_reconstructor.h
src/core/store/: frame_store.cpp  frame_store.h  raw_frame.h
src/shims/gl/: BUILD.bazel  dwarf_parser.c  dwarf_parser.h  frame_capture.c  frame_capture.h  gl_shim.c  gl_wrappers.c  gl_wrappers.h  ipc_client.c  ipc_client.h  native_trace.c  native_trace.h  pc_to_die.c  pc_to_die.h  shadow_state.c  shadow_state.h  stack_walker.c
src/shims/vk/: BUILD.bazel  gla_layer.c  gla_layer.h  gla_layer.json  gpa_layer.c  gpa_layer.json  vk_capture.c  vk_capture.h  vk_dispatch.c  vk_dispatch.h  vk_ipc_client.c  vk_ipc_client.h
tests/eval/: BUILD.bazel  README.md  e10_compensating_vp.c  e10_compensating_vp.md  e1_state_leak.c  e2_nan_propagation.c  e3_index_buffer_obo.c  e4_double_negation_cull.c  e5_uniform_collision.c  e6_depth_precision.c  e6_depth_precision.md  e7_shader_include_order.c  e7_shader_include_order.md  e8_race_texture_upload.c  e8_race_texture_upload.md  e9_scissor_not_reset.c  e9_scissor_not_reset.md  r14_using_quadmesh_with_a_custom_vertexnode_.c  r14_using_quadmesh_with_a_custom_vertexnode_.md  r16_change_shadow_pass_side_selection_logic.c  r1_webgl_backend_instancenode_ubo_exceeds_g.c  r1_webgl_backend_instancenode_ubo_exceeds_g.md  r20_webgpu_negative_scale_inverts_front_face.c  r31_weird_r164_webgl_renderer_regression_wit.c  r36_opengl_proximity_fade_could_not_create_3.c  r36_opengl_proximity_fade_could_not_create_3.md  r44_4_6_dev3_ssr_glitch_with_half_size_disab.c  r5_feedback_loop_error_with_transmission_an.c  r5_feedback_loop_error_with_transmission_an.md
tests/eval/e10_compensating_vp/: scenario.md
tests/eval/e11_state_leak_gl_texture_2d_binding_from_previous_draw_never_re/: scenario.md
tests/eval/e12_state_leak_gl_texture_3d_unit_0_still_bound_to_volumetric_te/: main.c  scenario.md
tests/eval/e13_state_leak_gl_texture_cube_map_binding_from_skybox_retained/: main.c  scenario.md
tests/eval/e15_uniform_value_leaked_gluseprogram_switch_old_utint_still_app/: scenario.md
tests/eval/e16_uniform_lifecycle_glgetuniformlocation_cached_across_gllinkp/: main.c  scenario.md
tests/eval/e17_uniform_type_mismatch_gluniform1f_used_for_a_vec3_uniform_re/: scenario.md
tests/eval/e18_uniform_wrong_program_gluseprogram_a_set_gluniform_called_wh/: main.c  scenario.md
tests/eval/e19_uniform_location_1_silently_ignored_because_shader_compiler/: scenario.md
tests/eval/e1_state_leak/: scenario.md
tests/eval/e20_uniform_never_uploaded_because_gluseprogram_was_called_after/: main.c  scenario.md
tests/eval/e22_depth_test_gl_greater_set_with_standard_perspective_back_fac/: scenario.md
tests/eval/e23_depth_write_disabled_gl_false_for_opaque_geometry_later_draw/: scenario.md
tests/eval/e24_reversed_z_expected_but_projection_matrix_still_produces_0_1/: main.c  scenario.md
tests/eval/e25_gldepthrange_set_to_1_0_but_depth_test_is_gl_less_nothing_vi/: scenario.md
tests/eval/e26_depth_buffer_not_cleared_between_frames_previous_frame_depth/: scenario.md
tests/eval/e27_culling_mesh_authored_cw_under_default_gl_ccw_front_face_all/: scenario.md
tests/eval/e28_culling_model_matrix_has_scale_1_on_x_winding_flips_and_back/: scenario.md
tests/eval/e29_culling_glfrontface_gl_cw_was_set_during_debug_and_never_res/: main.c  scenario.md
tests/eval/e2_nan_propagation/: scenario.md
tests/eval/e30_culling_gl_front_and_back_culled_every_triangle_discarded/: main.c  scenario.md
tests/eval/e31_stencil_test_leaked_from_a_ui_pass_main_geometry_fails_stenc/: scenario.md
tests/eval/e32_stencil_glstencilfunc_gl_never_0_0xff_set_accidentally_no_pi/: scenario.md
tests/eval/e33_stencil_mask_0_on_write_attempts_to_update_stencil_are_silen/: main.c  scenario.md
tests/eval/e3_index_buffer_obo/: scenario.md
tests/eval/e4_double_negation_cull/: scenario.md
tests/eval/e5_uniform_collision/: scenario.md
tests/eval/e6_depth_precision/: scenario.md
tests/eval/e7_shader_include_order/: scenario.md
tests/eval/e8_race_texture_upload/: scenario.md
tests/eval/e9_scissor_not_reset/: scenario.md
tests/eval/r10_polygon_rendered_from_dynamic_geojson_so/: main.c  scenario.md
tests/eval/r10_webgpurenderer_nodematerial_instance_mat/: scenario.md
tests/eval/r11_screen_glitch_with_bloom_on_m1_mac/: scenario.md
tests/eval/r11_three_js_effectcomposer_browser_window_r/: main.c
tests/eval/r12_omniscale_cleanedge_scaling_issues/: scenario.md
tests/eval/r13_bevy_clustering_vertex_storage_webgpu/: scenario.md
tests/eval/r13_bevy_depth_prepass_skipped_no_opaque/: scenario.md
tests/eval/r13_bevy_no_cpu_culling_runtime_disappears/: scenario.md
tests/eval/r13_bevy_volumetric_fog_postprocess_ordering/: scenario.md
tests/eval/r13_bevy_wireframe_depth_bias_line_topology/: scenario.md
tests/eval/r14_cannot_override_vertexnode_of_instanced_/: main.c  scenario.md
tests/eval/r14_using_quadmesh_with_a_custom_vertexnode_/: scenario.md
tests/eval/r14_webgpurenderer_make_colored_shadows_opti/: scenario.md
tests/eval/r15_post_effects_and_transparent_background_/: scenario.md
tests/eval/r16_change_shadow_pass_side_selection_logic/: scenario.md
tests/eval/r17_incorrect_clipping_with_global_clipping_/: main.c  scenario.md
tests/eval/r17_mapbox_gl_js_image_overlay_coordinates_p/: scenario.md
tests/eval/s4_fbo_texture_leak/: scenario.md
(+1074 files in other folders)
