module(
    name = "gla",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
# NOTE: flatbuffers BCR versions are incompatible with Bazel 9 (rules_swift compat issue).
# flatbuffers is added as http_archive in non_module_deps.bzl extension below.
bazel_dep(name = "glm", version = "1.0.1")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "pybind11_bazel", version = "3.0.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

# flatbuffers via http_archive (BCR version incompatible with Bazel 9)
non_module_deps = use_extension("//:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "com_github_google_flatbuffers")
