load("@rules_cc//cc:defs.bzl", "cc_binary")

[cc_binary(
    name = name,
    srcs = [name + ".c"],
    linkopts = ["-lGL", "-lX11", "-lm"],
) for name in [
    "e1_state_leak",
    "e2_nan_propagation",
    "e3_index_buffer_obo",
    "e4_double_negation_cull",
    "e5_uniform_collision",
    "e6_depth_precision",
    "e7_shader_include_order",
    "e8_race_texture_upload",
    "e9_scissor_not_reset",
    "e10_compensating_vp",
    "r1_webgl_backend_instancenode_ubo_exceeds_g",
    "r5_feedback_loop_error_with_transmission_an",
    "r14_using_quadmesh_with_a_custom_vertexnode_",
    "r16_change_shadow_pass_side_selection_logic",
    "r17_svg_path_seems_to_render_weird_in_some_c",
    "r20_webgpu_negative_scale_inverts_front_face",
    "r31_weird_r164_webgl_renderer_regression_wit",
    "r36_opengl_proximity_fade_could_not_create_3",
]]
