# Eval scenarios live in subpackages organized by taxonomy:
#   synthetic/<topic>/<slug>/      (hand-authored scenarios)
#   <category>/<framework>/<slug>/ (mined real-world bugs)
#
# Each scenario subpackage has its own BUILD.bazel that declares a
# cc_binary named after the leaf slug (only when *.c files are present).
#
# Build all runnable scenarios:
#   bazel build //tests/eval/...
#
# See docs/superpowers/specs/2026-05-02-eval-scenario-taxonomy-layout-design.md.
