load("@rules_cc//cc:defs.bzl", "cc_library", "cc_shared_library")

cc_library(
    name = "shadow_state",
    srcs = ["shadow_state.c"],
    hdrs = ["shadow_state.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dwarf_parser",
    srcs = ["dwarf_parser.c"],
    hdrs = ["dwarf_parser.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "stack_walker",
    srcs = ["stack_walker.c"],
    hdrs = ["stack_walker.h"],
    # libunwind headers live in the multiarch include path on Debian/Ubuntu
    # (/usr/include/x86_64-linux-gnu/libunwind.h); bazel's sandbox default
    # include search doesn't find them.
    copts = ["-I/usr/include/x86_64-linux-gnu"],
    linkopts = [
        "-lunwind",
        "-lunwind-x86_64",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dwarf_locations",
    srcs = ["dwarf_locations.c"],
    hdrs = ["dwarf_locations.h"],
    visibility = ["//visibility:public"],
    deps = [":stack_walker"],
)

cc_library(
    name = "http_post",
    srcs = ["http_post.c"],
    hdrs = ["http_post.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pc_to_die",
    srcs = ["pc_to_die.c"],
    hdrs = ["pc_to_die.h"],
    visibility = ["//visibility:public"],
    deps = [":dwarf_parser"],
)

cc_library(
    name = "native_trace",
    srcs = ["native_trace.c"],
    hdrs = ["native_trace.h"],
    linkopts = ["-ldl"],
    deps = [
        ":dwarf_locations",
        ":dwarf_parser",
        ":http_post",
        ":pc_to_die",
        ":stack_walker",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ipc_client",
    srcs = ["ipc_client.c"],
    hdrs = ["ipc_client.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "gpa_gl_impl",
    srcs = [
        "frame_capture.c",
        "gl_shim.c",
        "gl_wrappers.c",
    ],
    hdrs = [
        "frame_capture.h",
        "gl_wrappers.h",
    ],
    linkopts = ["-ldl"],
    deps = [
        ":ipc_client",
        ":native_trace",
        ":shadow_state",
    ],
    visibility = ["//visibility:public"],
)

cc_shared_library(
    name = "gpa_gl",
    deps = [":gpa_gl_impl"],
    visibility = ["//visibility:public"],
)
