load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "test_shadow_state",
    srcs = ["test_shadow_state.c"],
    deps = ["//src/shims/gl:shadow_state"],
)

cc_test(
    name = "test_http_post",
    srcs = ["test_http_post.c"],
    linkopts = ["-lpthread"],
    deps = ["//src/shims/gl:http_post"],
)

cc_test(
    name = "test_ipc_retry",
    srcs = ["test_ipc_retry.c"],
    linkopts = ["-lpthread"],
    deps = ["//src/shims/gl:ipc_client"],
)

cc_test(
    name = "test_native_trace",
    srcs = ["test_native_trace.c"],
    data = ["//tests/unit/shims/fixtures:trace_fixture"],
    deps = [
        "//src/shims/gl:dwarf_parser",
        "//src/shims/gl:native_trace",
        "//src/shims/gl:pc_to_die",
    ],
)

cc_test(
    name = "test_stack_walker",
    srcs = ["test_stack_walker.c"],
    # -O0 + -fno-omit-frame-pointer: the frame-cap and register tests
    # rely on every `deepN` / `deep_rec` call consuming a real frame
    # that libunwind can recover. gcc at -O0 keeps frame pointers by
    # default, but spelling it out documents intent and protects against
    # surprise if anyone bumps the optimization level.
    copts = ["-O0", "-fno-omit-frame-pointer"],
    deps = [
        "//src/shims/gl:dwarf_locations",
        "//src/shims/gl:stack_walker",
    ],
)
