load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "godot_112418_4_6_dev3_ssr_glitch_with_half_size_disab",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
