load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "godot_114069_godot_mobile_renderer_macos_transparent_flicker",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
