load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "godot_114606_reading_radiance_in_sky_shader_in_compat",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
