load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "godot_116038_godot_4_6_breaking_screen_space_fog_shad",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
