load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "godot_118136_node_lightmapgi_causing_a_crash_on_the_m",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
