load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "godot_79760_strange_bug_with_3_sprites_where_one_of_",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
