load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "godot_84558_opengl_depth_clear_issue_in_directional_",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
