load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "godot_proposals_7379_blend_modes_not_working_on_all_gpus_and_",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
