load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "godot_pull_107902_sampling_the_radiance_in_a_sky_shader_wi",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
