load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "godot_pull_110915_opengl_changing_scaling_3d_scale_away_fr",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
