load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "e28_culling_model_matrix_has_scale_1_on_x_winding_flips_and_back",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
