load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "e29_culling_glfrontface_gl_cw_was_set_during_debug_and_never_res",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
