load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "e30_culling_gl_front_and_back_culled_every_triangle_discarded",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
