load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "e22_depth_test_gl_greater_set_with_standard_perspective_back_fac",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
