load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "e23_depth_write_disabled_gl_false_for_opaque_geometry_later_draw",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
