load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "e24_reversed_z_expected_but_projection_matrix_still_produces_0_1",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
