load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "e26_depth_buffer_not_cleared_between_frames_previous_frame_depth",
    srcs = glob(["*.c"]),
    copts = ["-g", "-gdwarf-4", "-fno-omit-frame-pointer", "-O0"],
    linkopts = ["-lGL", "-lX11", "-lm"],
    visibility = ["//visibility:public"],
)
